src/base.css
:root, :host {
    /* Red */
    --fx-red-0: #ffe8ea;
    --fx-red-10: #ffc3c9;
    --fx-red-20: #ffa0aa;
    --fx-red-30: #ff7e8e;
    --fx-red-40: #fa5e75;
    --fx-red-50: #e8395c;
    --fx-red-60: #cf1748;
    --fx-red-70: #b20037;
    --fx-red-80: #90002b;
    --fx-red-90: #6e001f;
    --fx-red-100: #4c0516;
    --fx-red-110: #290b0f;

    /* Orange */
    --fx-orange-0: #ffedd6;
    --fx-orange-10: #ffcd9e;
    --fx-orange-20: #ffad69;
    --fx-orange-30: #ff8f31;
    --fx-orange-40: #f07300;
    --fx-orange-50: #df5400;
    --fx-orange-60: #c73c00;
    --fx-orange-70: #ab2700;
    --fx-orange-80: #8a1e00;
    --fx-orange-90: #6a1500;
    --fx-orange-100: #481200;
    --fx-orange-110: #270f00;

    /* Yellow */
    --fx-yellow-0: #fff4d0;
    --fx-yellow-10: #ffe699;
    --fx-yellow-20: #f5cc58;
    --fx-yellow-30: #f1af00;
    --fx-yellow-40: #de9600;
    --fx-yellow-50: #cc7d00;
    --fx-yellow-60: #b56700;
    --fx-yellow-70: #9c5200;
    --fx-yellow-80: #773800;
    --fx-yellow-90: #5d2800;
    --fx-yellow-100: #421b00;
    --fx-yellow-110: #271000;

    /* Green */
    --fx-green-0: #e1ffe1;
    --fx-green-10: #b5f0b5;
    --fx-green-20: #8adf8d;
    --fx-green-30: #61cc69;
    --fx-green-40: #37b847;
    --fx-green-50: #00a41c;
    --fx-green-60: #008e00;
    --fx-green-70: #007700;
    --fx-green-80: #005f00;
    --fx-green-90: #004800;
    --fx-green-100: #003200;
    --fx-green-110: #051c07;

    /* Cyan */
    --fx-cyan-0: #cfffff;
    --fx-cyan-10: #a6ecf4;
    --fx-cyan-20: #61dce9;
    --fx-cyan-30: #00cadb;
    --fx-cyan-40: #00b9d3;
    --fx-cyan-50: #00a5c1;
    --fx-cyan-60: #008eab;
    --fx-cyan-70: #007792;
    --fx-cyan-80: #005f75;
    --fx-cyan-90: #00485a;
    --fx-cyan-100: #00323d;
    --fx-cyan-110: #001c21;

    /* Blue */
    --fx-blue-0: #e2f7ff;
    --fx-blue-10: #abdfff;
    --fx-blue-20: #84c6ff;
    --fx-blue-30: #60adff;
    --fx-blue-40: #3f94ff;
    --fx-blue-50: #157aff;
    --fx-blue-60: #0062fa;
    --fx-blue-70: #0053cb;
    --fx-blue-80: #0041a4;
    --fx-blue-90: #00317e;
    --fx-blue-100: #042356;
    --fx-blue-110: #08152c;

    /* Violet */
    --fx-violet-0: #f4f0ff;
    --fx-violet-10: #ddcfff;
    --fx-violet-20: #c7b2ff;
    --fx-violet-30: #b295ff;
    --fx-violet-40: #9e7aff;
    --fx-violet-50: #8b5cff;
    --fx-violet-60: #7844f0;
    --fx-violet-70: #623ac3;
    --fx-violet-80: #4e2e9d;
    --fx-violet-90: #3b2279;
    --fx-violet-100: #281953;
    --fx-violet-110: #16112b;

    /* Purple */
    --fx-purple-0: #ffecff;
    --fx-purple-10: #f7caff;
    --fx-purple-20: #eaabff;
    --fx-purple-30: #d98dfa;
    --fx-purple-40: #c671eb;
    --fx-purple-50: #b453db;
    --fx-purple-60: #9e3bc3;
    --fx-purple-70: #8627a8;
    --fx-purple-80: #6b1e87;
    --fx-purple-90: #521568;
    --fx-purple-100: #381147;
    --fx-purple-110: #1e0e25;

    /* Pink */
    --fx-pink-0: #ffe8f4;
    --fx-pink-10: #ffc2db;
    --fx-pink-20: #ff9fc3;
    --fx-pink-30: #ff7ead;
    --fx-pink-40: #f45e96;
    --fx-pink-50: #e23a81;
    --fx-pink-60: #c91a6d;
    --fx-pink-70: #ad0059;
    --fx-pink-80: #8b0047;
    --fx-pink-90: #6b0035;
    --fx-pink-100: #490624;
    --fx-pink-110: #270b15;

    /* Grayscale */
    --fx-gray-0: #ffffff;
    --fx-gray-5: #f7f7f7;
    --fx-gray-10: #f0f0f0;
    --fx-gray-20: #e1e1e1;
    --fx-gray-30: #c8c8c8;
    --fx-gray-40: #adadad;
    --fx-gray-50: #939393;
    --fx-gray-60: #7a7a7a;
    --fx-gray-70: #5e5e5e;
    --fx-gray-80: #444444;
    --fx-gray-90: #2a2a2a;
    --fx-gray-95: #1a1a1a;
    --fx-gray-100: #000000;

    /* Blacks / Alpha (black with transparency) */
    --fx-black-alpha-5: rgba(0, 0, 0, 0.05);
    --fx-black-alpha-10: rgba(0, 0, 0, 0.1);
    --fx-black-alpha-20: rgba(0, 0, 0, 0.2);
    --fx-black-alpha-30: rgba(0, 0, 0, 0.3);
    --fx-black-alpha-40: rgba(0, 0, 0, 0.4);
    --fx-black-alpha-50: rgba(0, 0, 0, 0.5);
    --fx-black-alpha-60: rgba(0, 0, 0, 0.6);
    --fx-black-alpha-70: rgba(0, 0, 0, 0.7);
    --fx-black-alpha-80: rgba(0, 0, 0, 0.8);
    --fx-black-alpha-90: rgba(0, 0, 0, 0.9);

    /* Whites / Alpha (white with transparency) */
    --fx-white-alpha-5: rgba(255, 255, 255, 0.05);
    --fx-white-alpha-10: rgba(255, 255, 255, 0.1);
    --fx-white-alpha-20: rgba(255, 255, 255, 0.2);
    --fx-white-alpha-30: rgba(255, 255, 255, 0.3);
    --fx-white-alpha-40: rgba(255, 255, 255, 0.4);
    --fx-white-alpha-50: rgba(255, 255, 255, 0.5);
    --fx-white-alpha-60: rgba(255, 255, 255, 0.6);
    --fx-white-alpha-70: rgba(255, 255, 255, 0.7);
    --fx-white-alpha-80: rgba(255, 255, 255, 0.8);
    --fx-white-alpha-90: rgba(255, 255, 255, 0.9);

}


:root, :host {
    --ejz-accent: var(--fx-primary);
    --ejz-accent-hover: var(--fx-primary-hover);
    --ejz-accent-active: var(--fx-primary-active);

    --ejz-background: var(--fx-background);
    --ejz-surface: var(--fx-surface);
    --ejz-surfaceHover: color-mix(in srgb, var(--ejz-surface) 90%, light-dark(black, white) 10%);
    --ejz-backgroundHover: color-mix(in srgb, var(--ejz-background) 90%, light-dark(black, white) 10%);
    --ejz-onSurface: light-dark(var(--fx-gray-100), var(--fx-gray-0));
    --ejz-onBackground: var(--fx-onBackground);
    --ejz-onBackgroundVariant: var(--fx-onBackgroundVariant);
    --ejz-onSurfaceVariant: light-dark(var(--fx-gray-70), var(--fx-gray-50));

    --fx-primary: light-dark(var(--fx-blue-60), var(--fx-cyan-30));
    --fx-primary-hover: light-dark(var(--fx-blue-70), var(--fx-cyan-20));
    --fx-primary-active: light-dark(var(--fx-blue-80), var(--fx-cyan-10));

    --fx-critical: light-dark(var(--fx-red-70), var(--fx-red-10));
    --fx-critical-bg: light-dark(var(--fx-red-0), var(--fx-red-100));
    --fx-critical-text: light-dark(var(--fx-red-70), var(--fx-red-20));

    --fx-warning: light-dark(var(--fx-yellow-70), var(--fx-yellow-10));
    --fx-warning-bg: light-dark(var(--fx-yellow-0), var(--fx-yellow-100));
    --fx-warning-text: light-dark(var(--fx-yellow-70), var(--fx-yellow-20));

    --fx-success: light-dark(var(--fx-green-70), var(--fx-green-10));
    --fx-success-bg: light-dark(var(--fx-green-0), var(--fx-green-100));
    --fx-success-text: light-dark(var(--fx-green-70), var(--fx-green-20));

    --fx-info: light-dark(var(--fx-blue-70), var(--fx-blue-10));
    --fx-info-bg: light-dark(var(--fx-blue-0), var(--fx-blue-100));
    --fx-info-text: light-dark(var(--fx-blue-70), var(--fx-blue-20));

    --fx-background: light-dark(#ffffff, #1c1b22);
    --fx-surface: light-dark(#eeeeef, #2c2b31);
    --fx-onBackground: light-dark(#15141a, #fbfbfe);
    --fx-onBackgroundVariant: light-dark(#5d5d61, #b6b5b9);

    --th-bookmark-text: light-dark(#15141a, #fbfbfe);
    --th-button-background-active: light-dark(#b4b4b7, #6a6971);
    --th-button-background-hover: light-dark(#d3d2d5, #4e4d55);
    --th-icons: light-dark(#5b5b66, #fbfbfe);
    --th-icons-attention: light-dark(#0061e0, #00ddff);
    --th-frame: light-dark(#eaeaed, #1c1b22);
    --th-frame-inactive: light-dark(#ebebef, #1f1e25);

    --th-popup: light-dark(#ffffff, #42414d);
    --th-popup-border: light-dark(#f0f0f4, #52525e);
    --th-popup-highlight: light-dark(#e0e0e6, #2b2a33);
    --th-popup-highlight-text: light-dark(#000000, #fbfbfe);
    --th-popup-text: light-dark(#000000, #fbfbfe);

    --th-toolbar: light-dark(#f9f9fb, #2b2a33);
    --th-toolbar-bottom-separator: light-dark(#dddde0, #3e3d44);
    --th-toolbar-field: light-dark(#ececee, #1e1d24);
    --th-toolbar-field-border: var(--th-toolbar-field);
    --th-toolbar-field-border-focus: light-dark(#f0f0f4, #52525e);
    --th-toolbar-field-focus: var(--th-popup);
    --th-toolbar-field-highlight: light-dark(#0078d7, #2e7183);
    --th-toolbar-field-highlight-text: light-dark(#ffffff, var(--th-toolbar-field-text));
    --th-toolbar-field-separator: light-dark(#f0f0f4, #52525e);
    --th-toolbar-field-text: light-dark(#15141a, #fbfbfe);
    --th-toolbar-field-text-focus: light-dark(#000000, #fbfbfe);
    --th-toolbar-text: light-dark(var(--th-bookmark-text), #fbfbfe);
    --th-toolbar-top-separator: var(--th-toolbar);
    --th-toolbar-vertical-separator: light-dark(#717075, #a8a8ac);

    --th-sidebar: #000;
    --th-sidebar-border: #000;
    --th-sidebar-highlight: #000;
    --th-sidebar-highlight-text: #000;
    --th-sidebar-text: #000;

    --th-tab-background-separator: #000;
    --th-tab-background-text: #000;
    --th-tab-line: #000;
    --th-tab-loading: #000;
    --th-tab-selected: #000;
    --th-tab-text: #000;

    --th-ntp-background: #000;
    --th-ntp-card-background: #000;
    --th-ntp-text: #000;
}

body {
    font-family: TwitterChirp, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
    font-size: 15px;
}

a {
    color: var(--ejz-accent);
    text-decoration: none;
}
a:hover {
    color: var(--ejz-accent-hover);
    text-decoration: underline;
}
a:active {
    color: var(--ejz-accent-active);
    text-decoration: underline;
}

h1 {
    font-size: 35px;
    font-weight: 600;
}

h2 {
    font-size: 23px;
}

h3 {
    font-size: 16px;
}

button {
    margin: 5px;
    padding: 5px;
    border-radius: 5px;
    border: none;
    cursor: pointer;
    font-size: 15px;
    font-family: TwitterChirp, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
    font-weight: 600;
    background-color: var(--ejz-surface);
    color: var(--ejz-onSurface);
}
button.accent {
    background-color: var(--ejz-accent);
    color: white;
}
button.accent:hover {
    background-color: var(--ejz-accent-hover);
    color: white;
}
button.accent:active {
    background-color: var(--ejz-accent-active);
    color: white;
}

button:hover {
    background-color: var(--ejz-surfaceHover);
}

button:active {
    background-color: var(--ejz-backgroundHover);
}

button.danger {
    background-color: var(--fx-critical-bg);
    color: var(--fx-critical-text);
    border: 1px solid var( --fx-critical);
}

button.danger:hover {
    background-color: var(--fx-critical-bg);
    color: var(--fx-critical-text);
    border: 1px solid var( --fx-critical-text);
}

button.danger:active {
    background-color: var(--fx-critical);
}

pre {
    font-family: "JetBrains Mono", "SF Mono", SF Mono, Consolas, "Liberation Mono", Menlo, Courier, monospace;
    color: var(--fx-gray-80);
}

.outlined {
    border: 1px solid var(--th-popup-border);
}

.confirmationPopup, .emojeezer.confirmationPopup {
    position: absolute;
    top: calc( 50% - 100px );
    left: calc( 50% - 150px );
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    z-index: 1000;
    background-color: var(--th-popup);
    color: var(--th-popup-text);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    border: 1px solid rgba(0, 0, 0, 0.5);
    border-radius: 12px;
    padding: 10px;
}

.popupBackground, .emojeezer.popupBackground {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.0);
    z-index: 999;
}

